DEV rename components

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
   <title>App</title>
 </head>
 <body>
-  <div class="menu" style="position: fixed; right: 0; left: 0; text-align: center">
+  <div class="mfd-menu" style="position: fixed; right: 0; left: 0; text-align: center">
       <b>Выбрать страницу:&nbsp;</b>
-      <button value="signIn">Регистрация</button>
-      <button value="login">Вход</button>
+      <button class="mfd-menu__button" value="signIn">Регистрация</button>
+      <button class="mfd-menu__button" value="login">Вход</button>
   </div>
   <div id="app"></div>
   <script type="module" src="./index.ts"></script>
