--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>App</title>
+  <title>Smiler</title>
 </head>
 <body>
   <div class="mfd-menu" style="position: fixed; right: 0; left: 0; text-align: center">
-      <b>Выбрать страницу:&nbsp;</b>
-      <button class="mfd-menu__button" value="signIn">Регистрация</button>
-      <button class="mfd-menu__button" value="login">Вход</button>
+      <b>Select page:&nbsp;</b>
+      <button class="mfd-menu__button" value="login">Sign in</button>
+      <button class="mfd-menu__button" value="signIn">Registration</button>
   </div>
   <div id="app"></div>
   <script type="module" src="./index.ts"></script>
