add profile block

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,10 @@
 </head>
 <body>
   <div class="mfd-menu" style="position: fixed; right: 0; left: 0; text-align: center">
-      <b>Select page:&nbsp;</b>
-      <button class="mfd-menu__button" value="login">Sign in</button>
-      <button class="mfd-menu__button" value="signIn">Registration</button>
+    <b>Select page:&nbsp;</b>
+    <button class="mfd-menu__button" value="signIn">Sign in</button>
+    <button class="mfd-menu__button" value="registration">Registration</button>
+    <button class="mfd-menu__button" value="profile">Profile</button>
   </div>
   <div id="app"></div>
   <script type="module" src="./index.ts"></script>
