add change-password page

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
     <button class="mfd-menu__button" value="signIn">Sign in</button>
     <button class="mfd-menu__button" value="registration">Registration</button>
     <button class="mfd-menu__button" value="profile">Profile</button>
+    <button class="mfd-menu__button" value="changePassword">Change password</button>
+    <button class="mfd-menu__button" value="chat">Chat</button>
   </div>
   <div id="app"></div>
   <script type="module" src="./index.ts"></script>
