--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Smiler</title>
+  <link rel="shortcut icon" href="../static/favicon.ico"/>
 </head>
 <body>
   <div class="mfd-menu" style="position: fixed; right: 0; left: 0; text-align: center">
